--- a/templates/home-view.html
+++ b/templates/home-view.html
@@ -1,15 +1,8 @@
-{% extends "base.html" %}
-
-{% block content %}
-<h1>{{ object.title }} (id: {{ id }})!</h1>
-<p>{{ content }}!</p>
-
+{% extends "base.html" %} {% block content %}
 <ul>
-    {% for x in object_list %}
-        {% if x.title %}
-            <li><a href='/articles/{{ x.id }}/'>{{ x.title }} - {{ x.content }}</a></li>
-        {% endif %}
-    {% endfor %}
+  {% for x in object_list %} {% if x.title %}
+  <li><a href="/articles/{{ x.id }}/">{{ x.title }} - {{ x.content }}</a></li>
+  {% endif %} {% endfor %}
 </ul>
 
 {% endblock content %}
